# gold

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/engine/: BspMap.cpp  BspMap.h  Console.cpp  Console.h  Engine.cpp  Engine.h  FileSystem.cpp  FileSystem.h  LaunchOptions.cpp  LaunchOptions.h  Renderer.cpp  Renderer.h  SoundSystem.cpp  SoundSystem.h  StudioModel.cpp  StudioModel.h  WadFile.cpp  WadFile.h
